--- a/Milestone 2 Deploy Vercel/index.html
+++ b/Milestone 2 Deploy Vercel/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Milestone 2: Publish on GitHub and Host on Vercel by Sadiq Khan </h1>
     <form id="resumeform">
+        <!-- Personal Information -->
         <fieldset>
             <legend>Personal Information</legend>
             <label for="name">Name: </label>
